Fixed dark mode toggle animation and other animations styling overlap

--- a/src/components/FootballerAnimation/FootballerAnimation.module.css
+++ b/src/components/FootballerAnimation/FootballerAnimation.module.css
@@ -1,4 +1,4 @@
 .Animation {
-	width: 70%;
+	width: 100%;
 	margin: auto;
 }
